# vs-transitions

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/actions/setup-vapoursynth/: action.yml
.github/workflows/: autotag.yml  lint.yml  pypipublish.yml
vstransitions/: __init__.py  _metadata.py  easing.py  fade.py  panning.py
vstransitions/libs/: movis.py
