[project]
name = "vstransitions"
dynamic = ["version"]
description = "VapourSynth functions for making transitions and reanimating static shots"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Jaded Encoding Thaumaturgy"}
]
maintainers = [
    {name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com"}
]
classifiers = [
    "Topic :: Multimedia :: Graphics",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]
dependencies = [
    "VapourSynth>=67",
    "vsjetpack>=0.5.0",
]

[project.urls]
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-transitions"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.3",
    "pytest>=8.3.4, <9.0.0",
    "twine>=6.1.0",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=["vstransitions"]
include = ["vstransitions/py.typed"]
exclude = []

[tool.hatch.build.targets.sdist]
include = ["/vstransitions"]

[tool.hatch.version]
path = "vstransitions/_metadata.py"

[tool.pytest.ini_options]
pythonpath = "."

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

# Flags changed by --strict
warn_return_any = false
extra_checks = false

# Misc
warn_unreachable = true

allow_redefinition_new = true
local_partial_types = true
implicit_reexport = false
strict = true

show_column_numbers = true
pretty = true
color_output = true
error_summary = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "E",
    "C4",
    "I",
    "PYI",
    "Q",
    "SIM",
    "N",
    "W",
    "RUF"
]
ignore = ["PYI041"]

[tool.ruff.lint.per-file-ignores]
"__init__.*" = ["F401", "F403"]
